# firefly-cardano

./: .envrc  .envrc.local.example  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  flake.nix  justfile  treefmt.toml
.cargo/: audit.toml
.github/workflows/: demo.yml  docker-main.yml  docker-release.yml  docker.yml  tests.yml  validate-devshell.yml
firefly-balius/: Cargo.toml
firefly-balius/src/: events.rs  kv.rs  lib.rs  logic.rs  monitor.rs  worker.rs
firefly-cardanoconnect/: Cargo.toml  Dockerfile  config.base.yaml  config.md
firefly-cardanoconnect/db/migrations/sqlite/: V000001__create_streams_table.sql  V000002__create_listeners_table.sql  V000003__create_stream_checkpoints_table.sql  V000004__create_block_records_table.sql  V000005__create_operations_table.sql  V000006__add_block_record_transactions.sql  V000007__add_operations_contract_location.sql  V000008__create_operation_updates_table.sql  V000008__create_operations_history_table.sql  V000009__add_stream_checkpoints_last_operation_at.sql  V000009__add_stream_checkpoints_last_operation_id.sql
firefly-cardanoconnect/src/: blockchain.rs  blockfrost.rs  config.rs  contracts.rs  main.rs  operations.rs  persistence.rs  routes.rs  signer.rs  streams.rs  utils.rs
firefly-cardanoconnect/src/blockchain/: blockfrost.rs  mocks.rs  n2c.rs
firefly-cardanoconnect/src/blockchain/blockfrost/: chainsync.rs  client.rs  ledger.rs
firefly-cardanoconnect/src/blockchain/n2c/: chainsync.rs  ledger.rs
firefly-cardanoconnect/src/contracts/: kv.rs  ledger.rs  runtime.rs  u5c.rs
firefly-cardanoconnect/src/operations/: manager.rs  types.rs
firefly-cardanoconnect/src/persistence/: mocks.rs  sqlite.rs
firefly-cardanoconnect/src/routes/: chain.rs  contracts.rs  health.rs  operations.rs  streams.rs  transaction.rs  ws.rs
firefly-cardanoconnect/src/streams/: blockchain.rs  events.rs  manager.rs  mux.rs  types.rs
firefly-cardanosigner/: Cargo.toml  Dockerfile  config.base.yaml  config.md
firefly-cardanosigner/src/: config.rs  keys.rs  main.rs  private_key.rs  routes.rs
firefly-demo/src/: build_tx.rs  main.rs
firefly-server/: Cargo.toml  config.base.yaml
firefly-server/src/: apitypes.rs  config.rs  error.rs  http.rs  instrumentation.rs  lib.rs  server.rs
firefly-server/src/apitypes/: duration.rs  error.rs  no_content.rs
infra/: connect.yaml  docker-compose.common.yaml  docker-compose.node.yaml  docker-compose.yaml  firefly-core.yaml  mithril-entrypoint.sh  signer.yaml
scripts/demo/: Cargo.toml  README.md
scripts/demo/src/: firefly.rs  main.rs
scripts/deploy/: Cargo.toml
scripts/deploy-contract/: Cargo.toml  README.md
scripts/deploy-contract/src/: firefly.rs  main.rs
scripts/deploy/src/: clients.rs  contracts.rs  main.rs
scripts/deploy/src/clients/: firefly.rs
scripts/generate-key/: Cargo.toml
scripts/generate-key/src/: main.rs
wasm/: Cargo.toml
wasm/simple-tx/: Cargo.toml  contract.json
wasm/simple-tx/src/: lib.rs
wasm/submit-tx/: Cargo.toml
wasm/submit-tx/src/: firefly.rs  lib.rs
