[package]
name = "firefly-balius"
version = "0.4.2"
description = "Helpers to write contracts for the FireFly Cardano connector"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
balius-sdk = { git = "https://github.com/txpipe/balius", rev = "35db068" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
