[package]
name = "firefly-cardanoconnect"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/firefly-cardano"

[dependencies]
aide = { version = "0.13", features = ["axum"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "ws"] }
balius-runtime = { git = "https://github.com/SupernaviX/balius.git", rev = "5f0c81a" }
blockfrost = { git = "https://github.com/blockfrost/blockfrost-rust.git", rev = "14e22b5", default-features = false, features = ["rustls-tls"] }
blockfrost-openapi = "0.1.69"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dashmap = "6"
futures = "0.3"
pallas-codec = "0.31"
pallas-crypto = "0.31"
pallas-primitives = "0.31"
pallas-network = "0.31"
pallas-traverse = "0.31"
firefly-server = { path = "../firefly-server" }
hex = "0.4"
minicbor = "0.25"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = { version = "0.5" }
tracing = "0.1"
ulid = "1"
