[package]
name = "firefly-cardanosigner"
version = "0.3.0"
description = "A service managing keys and signing for the FireFly Cardano connector"
license-file.workspace = true
publish = false
edition = "2021"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
aide = { version = "0.14", features = ["axum", "axum-json"] }
axum = "0.8"
anyhow = "1"
bech32 = "0.11"
clap = { version = "4", features = ["derive"] }
firefly-server = { path = "../firefly-server" }
hex = "0.4"
minicbor = "0.26"
pallas-addresses = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
pallas-crypto = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
pallas-primitives = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
pallas-wallet = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
rand = "0.8"
schemars = "0.8"
serde = "1"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
