[package]
name = "firefly-server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/firefly-cardano"

[dependencies]
aide = { version = "0.13", features = ["axum"] }
axum = "0.7"
anyhow = "1"
convert_case = "0.6"
duration-str = "0.11"
figment = { version = "0.10", features = ["yaml", "env"] }
home = "0.5"
itertools = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
tokio = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-swagger-ui = { version = "8", features = ["axum"] }