[package]
name = "firefly-server"
version = "0.4.2"
description = "Internal library with shared code for services"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
aide = { version = "0.15", features = ["axum", "axum-json"] }
axum = "0.8"
anyhow = "1"
convert_case = "0.8"
duration-str = "0.17"
figment = { version = "0.10", features = ["yaml", "env"] }
home = "0.5"
itertools = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.9"
serde = "1"
serde_json = "1"
tokio = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
