[package]
name = "firefly-cardano-demo"
version = "0.4.1"
description = "A demo of the firefly-cardanoconnect API"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-websocket = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
