[package]
name = "firefly-cardano-deploy"
version = "0.3.0"
description = "A script to build and deploy a Balius-backed API to FireFly"
license-file.workspace = true
publish = false
edition = "2021"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
wat = "1"
wit-component = "0.223"
