[package]
name = "firefly-cardano-generate-key"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bech32 = "0.11"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
minicbor = "0.26"
pallas-crypto = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b0" }
pallas-primitives = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b0" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"