[package]
name = "firefly-cardano-generate-key"
version = "0.2.0"
description = "A script to easily generate Cardano addresses"
license-file.workspace = true
publish = false
edition = "2021"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
anyhow = "1"
bech32 = "0.11"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
minicbor = "0.26"
pallas-crypto = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
pallas-primitives = { git = "https://github.com/txpipe/pallas.git", rev = "2ddb5b066bbde9d2ed55014b286f47ad370b828e" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
