[package]
name = "firefly-cardano-generate-key"
version = "0.6.0"
description = "A script to easily generate Cardano addresses"
license-file.workspace = true
publish = false
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
anyhow = "1"
bech32 = "0.11"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
minicbor = "0.26"
pallas-crypto = "1.0.0-alpha.2"
pallas-primitives = "1.0.0-alpha.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
