[package]
name = "simple-tx"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
firefly-balius = { path = "../../firefly-balius" }
hex = "0.4"
pallas-addresses = { git = "https://github.com/txpipe/pallas", rev = "de9a0ea" }
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib"]