[package]
name = "simple-tx"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/hyperledger/firefly-cardano"

[dependencies]
firefly-balius = { path = "../../firefly-balius" }
hex = "0.4"
pallas-addresses = "1.0.0-alpha.1"
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib"]