[package]
name = "submit-tx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/firefly-cardano"

[dependencies]
balius-sdk = { git = "https://github.com/txpipe/balius.git", rev = "ce8189c" }
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib"]